--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Системи контролю версій Git та сервіс GitHub</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <article>
-      <h1><b>Системи контролю версій Git та сервіс GitHub</b></h1>
+      <h1 class="color"><b>Системи контролю версій Git та сервіс GitHub</b></h1>
       <p>Ти налаштуєш Git для роботи з Github і викладеш свій перший сайт в інтернет.</p>
       <p>💻<b>Щоб робота на занятті була якомога ефективнішою, радимо заздалегідь підготувати свої запитання до викладача та переглянути відео до уроку. 
           Будь ласка, слухай уважно, адже в тестах уроків чимало запитань за відеоматеріалами.</b> </p>
